--- a/less/uw/uw.body-content.less
+++ b/less/uw/uw.body-content.less
@@ -364,6 +364,7 @@ img.attachment-post-thumbnail.wp-post-image,
 }
 
 @media only screen and (max-width: @screen-md) {
+  .uw-sidebar .block,
   .widget {
     padding: 10px 0 0 0;
   }
