--- a/less/uw/uw.relative-menu.less
+++ b/less/uw/uw.relative-menu.less
@@ -102,3 +102,9 @@
     }
   }
 }
+@media only screen and (max-width: @screen-md) {
+  .uw-relative-menu {
+    margin: 0 0 10px;
+    padding: 10px 0 0 0;
+  }
+}
